진행도(만료됨) 추가, CSS(회색) 추가